--- a/style.css
+++ b/style.css
@@ -1,22 +1,80 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: black;
+    margin: 0; 
+    background-color: #222; 
     color: white;
 }
+
 table {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 20px;
 }
+
 th, td {
     border: 1px solid #ddd;
     text-align: left;
     padding: 8px;
 }
+
 th {
     background-color: #ce3535;
 }
+
 input[type="number"] {
-    width: 60px;
+    width: 40%;
+}
+
+#ENVASADOS {
+    background-color: #ce3535;
+}
+
+/* Navbar fija */
+.navbar {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    background-color: #333;
+    padding: 10px 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
+    padding: 10px 15px;
+    transition: background 0.3s;
+}
+
+.navbar a:hover {
+    background-color: #575757;
+    border-radius: 5px;
+}
+
+.navbar .logo {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    margin-right: auto;
+}
+
+/* Sección de contenido */
+section {
+    padding: 1% 2%;
+}
+
+#DataContent{
+    padding: 1% 2%;
+}
+
+section#embutidos {
+    background-color: #222;
+}
+
+section#tolavi {
+    background-color: #222; 
 }
